# Gmx2020PostAnalysis

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  build_2020.sh  configure  testSpeed
include/: README.md
include/fmt/: chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  locale.h  ostream.h  posix.h  printf.h  ranges.h  safe-duration-cast.h
include/itp/: color  core  fileio  getopt  gmx  logger  progressbar  timer  utility
src/analysis/: CMakeLists.txt  avg.cpp  get_Each_charge.cpp  onflyPostAnalysis.cpp  onflyPost_dens3D.cpp  post_dist.cpp  qv2ecacf.cpp  qv2ecacf_jhl.cpp  qv2ecacf_yt.cpp  read_ndx.cpp  testACF.cpp  testEigenResize.cpp  testRDF.cpp  testSparse.cpp
src/dipole/: CMakeLists.txt  calc_dipole.cpp  calc_dipole_lifetime.cpp
src/general/: 9g_dist_bin_1803.cpp  9g_energy2_bin_1803.cpp  9g_energy_bin_1803.cpp  calc_density_region.cpp  calc_dipole_lifetime.cpp  calc_distance.cpp  calc_ecacf.cpp  calc_energy.cpp  calc_force.cpp  calc_msd.cpp  calc_msd_bin.cpp  calc_rdf_region.cpp  density.cpp  density_slit_jhl.cpp  draft.cpp  electrodeTrajCat.cpp  gmx_msd.cpp  template1.cpp  template2.cpp
src/mofs/: CMakeLists.txt  calc_areaDensityDistributionPore.cpp  calc_density_distribution_in_pore.cpp  calc_density_time.cpp  calc_distance_mof.cpp  calc_ecacf-in-pore.cpp  calc_ecacf.cpp  calc_energy_time.cpp  calc_force_distribution.cpp  calc_free_bond_bulk.cpp  calc_inpore_index.cpp  calc_inpore_num_acf.cpp  calc_inpore_path.cpp  calc_inpore_path_freeBond.cpp  calc_mol_move.cpp  calc_msd_mof.cpp  calc_msd_mof2.cpp  calc_numdens_pore.cpp  calc_orient_mof.cpp  calc_pair_dist.cpp  calc_pair_dist_bulk.cpp  calc_pull_force.cpp  calc_qmsd_pore.cpp  calc_qmsd_pore2.cpp  calc_qmsd_pore2_thread.cpp  calc_qmsd_pore3_thread.cpp  (+4 more)
src/phaseChange/: CMakeLists.txt  calc_distribution_in_pore.cpp  calc_energy_pore.cpp  calc_kineticEnergy.cpp  calc_msd_lateral.cpp  calc_vacf_bulk.cpp  calc_vacf_pore.cpp
(+38 files in other folders)
